--- a/outline_first_paper.tex
+++ b/outline_first_paper.tex
@@ -695,11 +695,11 @@ y(\cdot) \sim \mathcal{GP}(0, k(\cdot, \cdot))
 Let $(X, y)$ denote $N$ observed input-output pairs. Let $K$ denote the kernel matrix with entries $K_{ij} = k(x_i, x_j)$. 
 I assume (for reasons discussed below) the following kernel parameterization 
 \begin{align*}
-K = \nu\left(C + \tau^2 I_N \right)
+K = \nu C = \nu \left(C_0 + \tau^2 I_N \right)
 \end{align*}
-where $C$ has entries given by the squared exponential correlation function 
+where $C_0$ has entries given by the squared exponential correlation function 
 \begin{align*}
-C_{ij} = \exp\left\{-\sum_{d = 1}^{D} \frac{((x_i)_d - (x_j)_d)^2}{\theta_d} \right\}
+\left[C_0\right]_{ij} = \exp\left\{-\sum_{d = 1}^{D} \frac{((x_i)_d - (x_j)_d)^2}{\theta_d} \right\}
 \end{align*}
 Here, $\nu$ is the marginal variance, $\tau^2$ is the nugget, and $\theta_1, \dots, \theta_d$ are the lengthscale parameters. I will write 
 $\phi$ to indicate the collection of all of these hyperparameters. 
@@ -738,6 +738,29 @@ constrained optimization problem looks like.
 &0 \leq \epsilon - \abs{y_n - \mu^*(x_n)} &&\forall n = 1, \dots, N
 \end{align*}
 
+\subsection{Gradient Information}
+I now compute the gradient of the log-likelihood with respect to $\phi = (\theta, \tau^2, \nu)$. The following facts will be helpful. 
+\begin{align*}
+&\frac{\partial C^{-1}}{\partial \cdot} = -C^{-1} \frac{\partial C}{\partial \cdot} C^{-1} && \frac{\partial \log\det C}{\partial \cdot} = \text{tr}\left(C^{-1} \frac{\partial C}{\partial \cdot} \right)
+\end{align*}
+Also note that $\theta_d$, $\tau^2$, $\nu$ are all constrained to be positive. The two main options for accounting for this constraint in the optimization are to 1.) parameterize the 
+objective function in terms of the log of these parameters or 2.) define bounds explicitly in the optimization (if allowed in the specific optimization algorithm). For now I consider the 
+latter in order to align with the \textit{hetGP} implementation. Denote $\ell(\phi) := \log p(y|X, \phi)$. For any hyperparameter $\phi_j \in \{\theta, \tau^2\}$ the general form of the gradient is 
+\begin{align*}
+\nabla_{\phi_j} \ell(\phi) &= -\frac{1}{2} \text{tr}\left(C^{-1} \frac{\partial C}{\partial \phi_j} \right) - \frac{1}{2\nu} y^\top \frac{\partial C^{-1}}{\partial \phi_j} y
+\end{align*}
+
+\subsubsection{Nugget Gradient}
+I will consider either defining $\tau$ or $\tau^2$ as the parameter. We have 
+\begin{align*}
+&\frac{\partial C}{\partial \tau^2} = I_N, &&\frac{\partial C}{\partial \tau} = 2\tau I_N
+\end{align*}
+
+\subsubsection{Marginal Variance Gradient}
+This derivative is simpler as $\nu$ appears outside of $C$. We have 
+\begin{align*}
+\nabla_{\nu} \ell(\phi) &= -\frac{N}{2\nu} + \frac{y^\top C^{-1} y}{2\nu^2}
+\end{align*}
 
 
 
