Progress on defining notation in local-defs.

--- a/framework_calibrating_ecosystem_models.tex
+++ b/framework_calibrating_ecosystem_models.tex
@@ -130,6 +130,15 @@ If we consider discretizing at constant time steps $\Delta t$ then since the sys
 % Bayesian Calibration 
 \section{Bayesian Calibration}
 
+% Emulator-Based Calibration for Dynamic Models
+\section{Emulator-Based Calibration for Dynamic Models}
+
+\subsection{Basis Functions}
+
+\subsection{Likelihood and Loss Emulation}
+
+
+
 \subsection{Statistical Setting}
 We denote the vector of calibration parameters by $\bpar \in \parspace \subset \R^{\Npar}$. The forward model (e.g. SIPNET or ED2) $\fwd(\bpar)$ maps calibration parameters to the model outputs. Note that the forward 
 model also depends on initial conditions and model drivers, but these are fixed throughout the analysis so are suppressed in the notation. Model outputs consist 
