--- a/local-defs.tex
+++ b/local-defs.tex
@@ -22,6 +22,20 @@
 \newcommand{\bforce}{\mathbf{w}} % Forcing input (bold)
 \newcommand{\fwdOne}{g} % One-step flow map
 
+% Gaussian Processes (GPs)
+\newcommand{\GP}{\mathcal{GP}} % GP distribution 
+\newcommand{\GPmean}{\mu} % Generic GP mean function
+\newcommand{\GPker}{k} % Generic GP kernel/covariance function
+\newcommand{\GPmeanOutput}{\mu^{(\outidx)}} % Generic GP mean function
+\newcommand{\GPkerOutput}{k} % Generic GP kernel/covariance function
+
+
+% Experimental/Sequential Design and Optimization
+\newcommand{\Ninit}{N_0} % Initial number of design points/size of space-filling design 
+\newcommand{\designidx}{n} % Primary index for design points (sequential design)
+\newcommand{\batchidx}{b}  % Primary index for rounds in sequential batch design
+
+
 % Custom Commands
 \newcommand*{\norm}[1]{\left\lVert#1\right\rVert}
 \newcommand*{\abs}[1]{\left\lvert#1\right\rvert}
