--- a/vsem_calibration_tests/Bayes_opt_tests.Rmd
+++ b/vsem_calibration_tests/Bayes_opt_tests.Rmd
@@ -249,25 +249,27 @@ lpost_design <- calc_lpost_theta_product_lik(theta_vals = design_info$inputs,
                                              na.rm = TRUE, 
                                              return_list = FALSE,
                                              theta_prior_params = theta_prior_params)
-lpost_max <- max(lpost_design)
+lpost_max_idx <- which.max(lpost_design)
 
 # Approximate Expected Improvement acquisition over grid of points. 
-EI_MC_est <- acquisition_EI_MC(theta_vals = prior_grid_info$inputs,
+EI_MC_est <- acquisition_EI_MC(theta_grid_ref = prior_grid_info$inputs,
                                emulator_info_list = emulator_info_list, 
-                               lpost_max = lpost_max, 
                                computer_model_data = computer_model_data, 
                                theta_prior_params = theta_prior_params, 
                                sig2_eps = diag(computer_model_data$Sig_eps), 
+                               design_objective_curr = lpost_design, 
+                               design_best_idx = lpost_max_idx,
                                gp_pred_list = gp_pred_grid, 
                                N_MC_samples = 100)
 
 # Approximate Probability of Improvement acquisition over grid of points. 
-PI_MC_est <- acquisition_EI_MC(theta_vals = prior_grid_info$inputs,
+PI_MC_est <- acquisition_EI_MC(theta_grid_ref = prior_grid_info$inputs,
                                emulator_info_list = emulator_info_list, 
-                               lpost_max = lpost_max, 
                                computer_model_data = computer_model_data, 
                                theta_prior_params = theta_prior_params, 
                                sig2_eps = diag(computer_model_data$Sig_eps), 
+                               design_objective_curr = lpost_design, 
+                               design_best_idx = lpost_max_idx,
                                gp_pred_list = gp_pred_grid, 
                                N_MC_samples = 100)
 ```
@@ -285,6 +287,7 @@ EI_MC_plt <- get_2d_heatmap_plot(X = prior_grid_info$inputs,
                                  bigger_is_better = TRUE, 
                                  legend_label = "EI")
 plot(EI_MC_plt)
+
 ```
 ```{r}
 # Monte Carlo approximation of Probability of Improvement acquisition over grid points.  
@@ -316,7 +319,6 @@ results <- bayes_opt_one_step(emulator_info_list = emulator_info_list,
                               theta_grid_ref = prior_grid_info$inputs)
 
 ```
-
 
 ```{r}
 
